# portfolio

./: .clangd  .gitignore  compile_commands.json  main  main.cpp
Learncpp/Chaper_13/13.y/: main  main.cpp
Learncpp/Chaper_13/std::pair/: main.cpp
Learncpp/Chapter_13/13.6/: main  main.cpp
Learncpp/Chapter_13/std::pair/: main
Learncpp/Chapter_14/14.5/: main.cpp
Learncpp/Chapter_14/14.x/Question1/: CMakeLists.txt  main.cpp
Learncpp/Chapter_14/14.x/Question2/: CMakeLists.txt  main.cpp
Learncpp/Chapter_14/omia/: main  main.cpp
Learncpp/Chapter_15/Omia/: CMakeLists.txt  date.cpp  date.h  main.cpp
Learncpp/Chapter_3/: CMakeLists.txt  main  main.cpp
Learncpp/Chapter_4/: CMakeLists.txt  main.cpp
Learncpp/Chapter_4/Quiz_2/: CMakeLists.txt  main  main.cpp
Learncpp/Chapter_4/Quiz_3/: CMakeLists.txt  main.cpp
Learncpp/Chapter_4/isPrime/: CMakeLists.txt  main.cpp
Learncpp/Chapter_5/Quiz_1/: CMakeLists.txt  main.cpp
Learncpp/Chapter_5/Quiz_6/: main  main.cpp
Learncpp/Chapter_5/omiaJuttuja/: CMakeLists.txt  main  main.cpp  sum.h
Learncpp/Chapter_7/7.3/: main  main.cpp
Learncpp/Chapter_8/8.6/: main  main.cpp
Learncpp/Chapter_8/Testeja/: main  main.cpp
Learncpp/HelloWorld/: add.cpp
Learncpp/chapter2quiz/: io.cpp  main.cpp
Leet-code/242. Valid Anagram/: main.cpp
Leet-code/35. Search Insert Position/: main.cpp
Leet-code/69. Sqrt(x)/: main.cpp
Leet-code/Easy/1. Two_Sum/: main  main.cpp  main1  main1.cpp
Leet-code/Easy/136. Single Number/: main  main.cpp
Leet-code/Easy/20. Valid Parentheses/: main.cpp
Leet-code/Easy/2129. Capitalize the Title/: main.cpp
Leet-code/Easy/217. Contains Duplicate/: main.cpp
Leet-code/Easy/242. Valid Anagram/: main
Leet-code/Easy/258. Add number/: main  main.cpp
Leet-code/Easy/26. Remove Duplicates from Sorted Array/: main  main.cpp
Omia/: enum.cpp
Omia/Enum/: enum  enum.cpp
Omia/Korttipeli/: main  main.cpp  random.h
Omia/VektoriFunktioita/: main  main.cpp
Omia/headerFilut/: main  main.cpp  math_functions.cpp  math_functions.h
Omia/monsterTurnGame/: CMakeLists.txt  game.cpp  game.h  main  main.cpp  monsters.cpp  monsters.h
Omia/random/: main  main.cpp
Omia/struct/: main.cpp
Omia/testi/: main  main.cpp
(+81 files in other folders)
